--- a/html/architect.html
+++ b/html/architect.html
@@ -36,7 +36,7 @@
 
       <div class="container">
 
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">AS Propiedades</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
           aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -118,9 +118,9 @@
 
               <div class="wow fadeInUp">
 
-                <h2 class="display-3 font-weight-bold mb-3">John Doe</h2>
+                <h2 class="display-3 font-weight-bold mb-3">Ariel Sauret</h2>
 
-                <h4 class="text-uppercase font-weight-bold pb-5">Architect</h4>
+                <h4 class="text-uppercase font-weight-bold pb-5">Propiedades</h4>
 
                 <h2 class=" mt-3">Welcome to my portfolio!</h2>
 
@@ -152,9 +152,7 @@
 
           <!-- Secion heading -->
           <h1 class="text-center white-text text-uppercase font-weight-bold mt-5 mb-3 mt-4 wow fadeIn"
-            data-wow-delay="0.2s">About
-
-            me</h1>
+            data-wow-delay="0.2s">La Empresa</h1>
 
           <!-- Section description -->
           <p class="text-center white-text text-uppercase font-weight-bold  wow fadeIn" data-wow-delay="0.2s">All about
@@ -216,9 +214,8 @@
       <section id="services" class="section feature-box pt-3 pb-4">
 
         <!-- Secion heading -->
-        <h1 class="text-center text-uppercase font-weight-bold  mt-5 mb-3 mt-4 wow fadeIn" data-wow-delay="0.2s">What i
-
-          do</h1>
+        <h1 class="text-center text-uppercase font-weight-bold  mt-5 mb-3 mt-4 wow fadeIn" data-wow-delay="0.2s">
+          Servicios</h1>
 
         <!-- Section description -->
         <p class="text-center  text-uppercase font-weight-bold  wow fadeIn" data-wow-delay="0.2s">All about my work</p>
@@ -329,9 +326,8 @@
         <!-- Section: Main portfolio -->
         <section id="portfolio" class="section pt-3 pb-3">
 
-          <h1 class="text-center text-uppercase font-weight-bold mt-5 mb-3 mt-5 wow fadeIn" data-wow-delay="0.2s">My
-
-            projects</h1>
+          <h1 class="text-center text-uppercase font-weight-bold mt-5 mb-3 mt-5 wow fadeIn" data-wow-delay="0.2s">
+            Propiedades</h1>
 
           <!-- Section description -->
           <p class="text-center w-responsive mx-auto text-uppercase font-weight-bold wow fadeIn" data-wow-delay="0.2s">
@@ -523,14 +519,12 @@
       <section id="contact" class="section mb-4">
 
         <!-- Section heading -->
-        <h1 class="text-center text-uppercase font-weight-bold mt-5 pt-4 mb-3 wow fadeIn" data-wow-delay="0.2s">Contact
-
-          me</h1>
+        <h1 class="text-center text-uppercase font-weight-bold mt-5 pt-4 mb-3 wow fadeIn" data-wow-delay="0.2s">
+          Contacto</h1>
 
         <!-- Section description -->
-        <p class="text-center  text-uppercase font-weight-bold  wow fadeIn" data-wow-delay="0.2s">to get more
-
-          information</p>
+        <p class="text-center  text-uppercase font-weight-bold  wow fadeIn" data-wow-delay="0.2s">
+          Para obtener mas informacion</p>
 
         <div class="line wow fadeIn" data-wow-delay="0.2s"></div>
 
