agregando imagenes propiedades

--- a/html/architect.html
+++ b/html/architect.html
@@ -106,7 +106,7 @@
 
     <!-- Intro Section -->
     <div id="home" class="view jarallax" data-jarallax='{"speed": 0.2}'
-      style="background-image: url('https://mdbootstrap.com/img/Photos/Horizontal/People/full%20page/img%20%2827%29.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
+      style="background-image: url('/img/as-prop/img 01.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
 
       <div class="mask rgba-black-slight">
 
@@ -218,7 +218,7 @@
           Servicios</h1>
 
         <!-- Section description -->
-        <p class="text-center  text-uppercase font-weight-bold  wow fadeIn" data-wow-delay="0.2s">All about my work</p>
+        <p class="text-center  text-uppercase font-weight-bold  wow fadeIn" data-wow-delay="0.2s">Servicions que ofrecemos</p>
 
         <div class="line  wow fadeIn" data-wow-delay="0.2s"></div>
 
@@ -236,7 +236,7 @@
 
               </a>
 
-              <h6><strong class="font-weight-bold mb-3 pb-3">PROJECT</strong></h6>
+              <h6><strong class="font-weight-bold mb-3 pb-3">TASACIONES</strong></h6>
 
               <p class="pt-3 blue-grey-text mt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error
                 amet
@@ -257,7 +257,7 @@
 
               </a>
 
-              <h6><strong class="font-weight-bold mb-3 pb-3">CONSTRUCTION</strong></h6>
+              <h6><strong class="font-weight-bold mb-3 pb-3">VENTA DE PROPIEDADES</strong></h6>
 
               <p class="pt-3 blue-grey-text mt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error
                 amet
@@ -278,7 +278,7 @@
 
               </a>
 
-              <h6><strong class="font-weight-bold mb-3 pb-3">DESIGN</strong></h6>
+              <h6><strong class="font-weight-bold mb-3 pb-3">ALQUILER DE PROPIEDADES</strong></h6>
 
               <p class="pt-3 blue-grey-text mt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error
                 amet
@@ -299,7 +299,7 @@
 
               </a>
 
-              <h6><strong class="font-weight-bold mb-3 pb-3">VISUALIZATON</strong></h6>
+              <h6><strong class="font-weight-bold mb-3 pb-3">ADMINISTRACION DE ALQUILERES</strong></h6>
 
               <p class="pt-3 blue-grey-text mt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error
                 amet
@@ -331,9 +331,7 @@
 
           <!-- Section description -->
           <p class="text-center w-responsive mx-auto text-uppercase font-weight-bold wow fadeIn" data-wow-delay="0.2s">
-            All
-
-            about my work</p>
+            Algunas de nuestras propiedades</p>
 
           <div class="line line-v2 wow fadeIn" data-wow-delay="0.2s"></div>
 
@@ -359,105 +357,105 @@
 
                 <figure class="col-md-3">
 
-                  <a href="https://mdbootstrap.com/img/Photos/Lightbox/Original/img%20(135).jpg" data-size="1600x1067">
+                  <a href="\img\as-prop\img-02.jpg" data-size="1600x1067">
 
-                    <img src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(135).jpg"
+                    <img src="\img\as-prop\img-02.jpg"
                       class="img-fluid z-depth-1">
 
                   </a>
 
-                  <p class="text-uppercase font-weight-bold blue-grey-text mt-4">| Lorem ipsum dolor sit amet</p>
+                  <p class="text-uppercase font-weight-bold blue-grey-text mt-4">| Casa Jose</p>
 
                 </figure>
 
                 <figure class="col-md-3">
 
-                  <a href="https://mdbootstrap.com/img/Photos/Lightbox/Original/img%20(128).jpg" data-size="1600x1067">
+                  <a href="/img/as-prop/img-03.jpg" data-size="1600x1067">
 
-                    <img src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(128).jpg"
+                    <img src="/img/as-prop/img-03.jpg"
                       class="img-fluid z-depth-1">
 
                   </a>
 
-                  <p class="text-uppercase font-weight-bold blue-grey-text mt-4">| Lorem ipsum dolor sit amet</p>
+                  <p class="text-uppercase font-weight-bold blue-grey-text mt-4">| Palomar</p>
 
                 </figure>
 
                 <figure class="col-md-3">
 
-                  <a href="https://mdbootstrap.com/img/Photos/Lightbox/Original/img%20(133).jpg" data-size="1600x1067">
+                  <a href="/img/as-prop/img-04.jpg" data-size="1600x1067">
 
-                    <img src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(133).jpg"
+                    <img src="/img/as-prop/img-04.jpg"
                       class="img-fluid z-depth-1">
 
                   </a>
 
-                  <p class="text-uppercase font-weight-bold blue-grey-text mt-4">| Lorem ipsum dolor sit amet</p>
+                  <p class="text-uppercase font-weight-bold blue-grey-text mt-4">| Martin Coronado</p>
 
                 </figure>
 
                 <figure class="col-md-3">
 
-                  <a href="https://mdbootstrap.com/img/Photos/Lightbox/Original/img%20(131).jpg" data-size="1600x1067">
+                  <a href="/img/as-prop/img-05.jpg" data-size="1600x1067">
 
-                    <img src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(131).jpg"
+                    <img src="/img/as-prop/img-05.jpg"
                       class="img-fluid z-depth-1">
 
                   </a>
 
-                  <p class="text-uppercase font-weight-bold blue-grey-text mt-4">| Lorem ipsum dolor sit amet</p>
+                  <p class="text-uppercase font-weight-bold blue-grey-text mt-4">| Ciudad Jardin</p>
 
                 </figure>
 
                 <figure class="col-md-3">
 
-                  <a href="https://mdbootstrap.com/img/Photos/Lightbox/Original/img%20(130).jpg" data-size="1600x1067">
+                  <a href="/img/as-prop/img-06.jpg" data-size="1600x1067">
 
-                    <img src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(130).jpg"
+                    <img src="/img/as-prop/img-06.jpg"
                       class="img-fluid z-depth-1">
 
                   </a>
 
-                  <p class="text-uppercase font-weight-bold blue-grey-text mt-4">| Lorem ipsum dolor sit amet</p>
+                  <p class="text-uppercase font-weight-bold blue-grey-text mt-4">| San Martin</p>
 
                 </figure>
 
                 <figure class="col-md-3">
 
-                  <a href="https://mdbootstrap.com/img/Photos/Lightbox/Original/img%20(132).jpg" data-size="1600x1067">
+                  <a href="/img/as-prop/img-07.jpg" data-size="1600x1067">
 
-                    <img src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(132).jpg"
+                    <img src="/img/as-prop/img-07.jpg"
                       class="img-fluid z-depth-1">
 
                   </a>
 
-                  <p class="text-uppercase font-weight-bold blue-grey-text mt-4">| Lorem ipsum dolor sit amet</p>
+                  <p class="text-uppercase font-weight-bold blue-grey-text mt-4">| Surra</p>
 
                 </figure>
 
                 <figure class="col-md-3">
 
-                  <a href="https://mdbootstrap.com/img/Photos/Lightbox/Original/img%20(134).jpg" data-size="1600x1067">
+                  <a href="/img/as-prop/img-08.jpg" data-size="1600x1067">
 
-                    <img src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(134).jpg"
+                    <img src="/img/as-prop/img-08.jpg"
                       class="img-fluid z-depth-1">
 
                   </a>
 
-                  <p class="text-uppercase font-weight-bold blue-grey-text mt-4">| Lorem ipsum dolor sit amet</p>
+                  <p class="text-uppercase font-weight-bold blue-grey-text mt-4">| Monet</p>
 
                 </figure>
 
                 <figure class="col-md-3">
 
-                  <a href="https://mdbootstrap.com/img/Photos/Lightbox/Original/img%20(1).jpg" data-size="1600x1067">
+                  <a href="/img/as-prop/img-09.jpg" data-size="1600x1067">
 
-                    <img src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(1).jpg"
+                    <img src="/img/as-prop/img-09.jpg"
                       class="img-fluid z-depth-1">
 
                   </a>
 
-                  <p class="text-uppercase font-weight-bold blue-grey-text mt-4">| Lorem ipsum dolor sit amet</p>
+                  <p class="text-uppercase font-weight-bold blue-grey-text mt-4">| Verna</p>
 
                 </figure>
 
@@ -497,13 +495,11 @@
 
         <div class="white-text smooth-scroll wow fadeIn" data-wow-delay="0.2s">
 
-          <h3 class="text-center h3-responsive mb-5"><i class="fas fa-quote-left" aria-hidden="true"></i> Lorem ipsum
-
-            dolor sit amet, consectetur adipisicing elit.
-
+          <h3 class="text-center h3-responsive mb-5"><i class="fas fa-quote-left" aria-hidden="true"></i>
+            Enfocados en el cliente.Impulsados por los resultados
             <i class="fas fa-quote-right" aria-hidden="true"></i></h3>
 
-          <h5 class="text-center font-italic wow fadeIn" data-wow-delay="0.2s">~ Erich Fromm</h5>
+          <h5 class="text-center font-italic wow fadeIn" data-wow-delay="0.2s">~ Ariel Sauret Propiedades</h5>
 
         </div>
 
