--- a/html/propiedad.html
+++ b/html/propiedad.html
@@ -222,49 +222,49 @@
         <table class="table table-responsive-md">
           <tbody>
 
-              <th scope="row">Tipo</th>
+              <th scope="row" class="text-center">Tipo</th>
 
-              <td>Tipo de propiedad</td>
-
-            </tr>
-
-            <tr>
-
-              <th scope="row">Ubicacion</th>
-
-              <td>Ubicacion de la propiedad</td>
+              <td class="text-center">Tipo de propiedad</td>
 
             </tr>
 
             <tr>
 
-              <th scope="row">Ambientes</th>
+              <th scope="row" class="text-center">Ubicacion</th>
 
-              <td>Cantidad de ambientes que tiene la propiedad</td>
-
-            </tr>
-
-            <tr>
-
-              <th scope="row">Precio</th>
-
-              <td>Precio de la propiedad</td>
+              <td class="text-center">Ubicacion de la propiedad</td>
 
             </tr>
 
             <tr>
 
-              <th scope="row">Descripcion</th>
+              <th scope="row" class="text-center">Ambientes</th>
 
-              <td>Una descripcion acerca de la  propiedad</td>
+              <td class="text-center">Cantidad de ambientes que tiene la propiedad</td>
 
             </tr>
 
             <tr>
 
-              <th scope="row">Comentario</th>
+              <th scope="row" class="text-center">Precio</th>
 
-              <td>Un comentario acerca de la propiedad</td>
+              <td class="text-center">Precio de la propiedad</td>
+
+            </tr>
+
+            <tr>
+
+              <th scope="row" class="text-center">Descripcion</th>
+
+              <td class="text-center">Una descripcion acerca de la  propiedad</td>
+
+            </tr>
+
+            <tr>
+
+              <th scope="row" class="text-center">Comentario</th>
+
+              <td class="text-center">Un comentario acerca de la propiedad</td>
 
             </tr>
 
@@ -273,12 +273,13 @@
           </tbody>
 
         </table>
+        
           <!--Google map-->
           <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
               <iframe src="https://maps.google.com/maps?q=villa+bosch&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
                 style="border:0" allowfullscreen></iframe>
-            </div>
-            <!--Google Maps-->
+          </div>
+          <!--Google Maps-->
 
       </div>
 
