--- a/index.html
+++ b/index.html
@@ -51,25 +51,19 @@
 
             <li class="nav-item">
 
-              <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
 
             </li>
 
             <li class="nav-item">
 
-              <a class="nav-link" href="#about" data-offset="90">About Me</a>
+              <a class="nav-link" href="listado-propiedades.html" data-offset="90">Venta</a>
 
             </li>
 
             <li class="nav-item">
 
-              <a class="nav-link" href="#portfolio" data-offset="30">Portfolio</a>
-
-            </li>
-
-            <li class="nav-item">
-
-              <a class="nav-link" href="#contact" data-offset="100">Contact</a>
+              <a class="nav-link" href="#contact" data-offset="100">Contacto</a>
 
             </li>
 
