contacto al nav

--- a/listado-propiedades.html
+++ b/listado-propiedades.html
@@ -63,7 +63,7 @@
   
               <li class="nav-item">
   
-                <a class="nav-link" href="#contact" data-offset="100">Contacto</a>
+                <a class="nav-link" href="contacto.html" data-offset="100">Contacto</a>
   
               </li>
   
