--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
               <a
                 class="btn-floating btn-lg grey darken-1 p-5 mb-3 d-inline-flex justify-content-center align-items-center">
 
-                <i class="fas fa-pencil-alt d-flex justify-content-center"></i>
+                <i class="fas fa-percent d-flex justify-content-center"></i>
 
               </a>
 
@@ -268,7 +268,7 @@
               <a
                 class="btn-floating btn-lg grey darken-1 p-5 mb-3 d-inline-flex justify-content-center align-items-center">
 
-                <i class="fas fa-paint-brush d-flex justify-content-center"></i>
+                <i class="fas fa-key d-flex justify-content-center"></i>
 
               </a>
 
@@ -289,7 +289,7 @@
               <a
                 class="btn-floating btn-lg grey darken-1 p-5 mb-3 d-inline-flex justify-content-center align-items-center">
 
-                <i class="fas fa-laptop d-flex justify-content-center"></i>
+                <i class="fas fa-calculator d-flex justify-content-center"></i>
 
               </a>
 
