--- a/index.html
+++ b/index.html
@@ -21,6 +21,34 @@
     .jarallax {
       height: 100%;
     }
+    .view {
+      height: 100%;
+    }
+    @media (max-width: 450px) {
+      html,
+      body,
+      header,
+      .view {
+        height: 700px;
+      }
+    }
+    @media (min-width: 451px) and (max-width: 740px) {
+      html,
+      body,
+      header,
+      .view {
+        height: 500px;
+      }
+    }
+    @media (min-width: 800px) and (max-width: 850px) {
+      html,
+      body,
+      header,
+      .view {
+        height: 550px;
+      }
+    }
+
 
   </style>
 
@@ -98,37 +126,34 @@
 
     </nav>
 
-    <!-- Intro Section -->
-    <div id="home" class="view jarallax" data-jarallax='{"speed": 0.2}'
-      style="background-image: url('/img/as-prop/img 01.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
-
-      <div class="mask rgba-black-slight">
-
-        <div class="container h-100 d-flex justify-content-start align-items-center">
-
-          <div class="row smooth-scroll">
-
-            <div class="col-md-12">
-
-              <div class="wow fadeInUp">
-
-                <h2 class="display-3 font-weight-bold mb-3">Ariel Sauret</h2>
-
-                <h4 class="text-uppercase font-weight-bold pb-5">Propiedades</h4>
-
-                <h2 class=" mt-3">Welcome to my portfolio!</h2>
-
+    <!-- Video -->
+    <section class="view">
+        <video poster="https://mdbootstrap.com/img/Photos/Others/background.jpg" playsinline autoplay muted loop>
+          <source src="img/video.mp4" type="video/mp4">
+        </video>
+        <div class="mask rgba-black-light">
+          <div class="container h-100 d-flex justify-content-center align-items-center">
+            <div class="row pt-5 mt-3">
+              <div class="col-md-12 white-text text-center smooth-scroll">
+                <div class="wow fadeInDown" data-wow-delay="0.2s">
+                  <h3 class="display-4 font-weight-bold white-text mb-4">Ariel Sauret Propiedades</h3>
+                  <hr class="hr-light my-4 clearfix d-none d-md-block">
+                  <h5 class="white-text description mx-3 mb-4 wow fadeIn" data-wow-delay="0.3s">Lorem ipsum dolor sit
+                    amet, consectetur adipisicing elit. Rem repellendus quasi fuga
+                    nesciunt dolorum nulla magnam veniam sapiente, fugiat!
+                  </h5>
+                </div>
+                <a class="btn pink-gradient btn-rounded btn-lg font-weight-bold wow fadeIn" data-wow-delay="0.3s" href="#services">
+                  Servicios</a>
+                <a class="btn btn-white btn-rounded btn-lg orange-text font-weight-bold ml-lg-0 wow fadeIn"
+                  data-wow-delay="0.3s" href="#portfolio">
+                  <i class="fas fa-home orange-text mr-2" aria-hidden="true"></i> Propiedades</a>
               </div>
-
             </div>
-
           </div>
-
         </div>
-
-      </div>
-
-    </div>
+    </section>
+      
 
   </header>
   <!-- Navigation & Intro -->
