--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
 
               <div class="col-md-12">
 
-                <a class="btn btn-outline-black waves-effect"><strong
+                <a class="btn btn-outline-black waves-effect" href="listado-propiedades.html"><strong
                     class="font-weight-bold mb-3 pb-3">more</strong></a>
 
               </div>
