--- a/listado-propiedades.html
+++ b/listado-propiedades.html
@@ -21,6 +21,9 @@
     .jarallax {
       height: 100%;
     }
+    header {
+      height: auto;
+    }
 
   </style>
 
@@ -279,7 +282,7 @@
   
                     </table>
                     <!-- Button -->
-                    <a href="/html/propiedad.html" class="btn btn-primary">Mas Informacion</a>
+                    <a href="propiedad.html" class="btn btn-primary">Mas Informacion</a>
                 
                   </div>
       
