--- a/contacto.html
+++ b/contacto.html
@@ -21,6 +21,9 @@
     .jarallax {
       height: 100%;
     }
+    header {
+      height: auto;
+    }
 
   </style>
 
@@ -31,114 +34,115 @@
   <!-- Navigation & Intro -->
   <header>
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
-
-      <div class="container">
-
-        <a class="navbar-brand" href="#">AS Propiedades</a>
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-          aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-
-          <span class="navbar-toggler-icon"></span>
-
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-
-          <ul class="navbar-nav mr-auto smooth-scroll">
-
-            <li class="nav-item">
-
-              <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
-
-            </li>
-
-            <li class="nav-item">
-
-              <a class="nav-link" href="listado-propiedades.html" data-offset="90">Venta</a>
-
-            </li>
-
-            <li class="nav-item">
-
-              <a class="nav-link" href="contacto.html" data-offset="100">Contacto</a>
-
-            </li>
-
-          </ul>
-
-          <!-- Social Icon  -->
-          <ul class="navbar-nav nav-flex-icons">
-
-            <li class="nav-item">
-
-              <a class="nav-link"><i class="fab fa-facebook-f"></i></a>
-
-            </li>
-
-            <li class="nav-item">
-
-              <a class="nav-link"><i class="fab fa-twitter"></i></a>
-
-            </li>
-
-            <li class="nav-item">
-
-              <a class="nav-link"><i class="fab fa-instagram"></i></a>
-
-            </li>
-
-          </ul>
-
-        </div>
-
-      </div>
-
-    </nav>
-
-    <!-- Intro Section -->
-    <div id="home" class="view jarallax" data-jarallax='{"speed": 0.2}'
-      style="background-image: url('/img/as-prop/img 01.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
-
-      <div class="mask rgba-black-slight">
-
-        <div class="container h-100 d-flex justify-content-start align-items-center">
-
-          <div class="row smooth-scroll">
-
-            <div class="col-md-12">
-
-              <div class="wow fadeInUp">
-
-                <h2 class="display-3 font-weight-bold mb-3">Ariel Sauret</h2>
-
-                <h4 class="text-uppercase font-weight-bold pb-5">Propiedades</h4>
-
-                <h2 class=" mt-3">Welcome to my portfolio!</h2>
-
-              </div>
-
-            </div>
-
+      <!-- Navbar -->
+      <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
+  
+        <div class="container">
+  
+          <a class="navbar-brand" href="#">AS Propiedades</a>
+  
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+            aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+  
+            <span class="navbar-toggler-icon"></span>
+  
+          </button>
+  
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+  
+            <ul class="navbar-nav mr-auto smooth-scroll">
+  
+              <li class="nav-item">
+  
+                <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
+  
+              </li>
+  
+              <li class="nav-item">
+  
+                <a class="nav-link" href="listado-propiedades.html" data-offset="90">Venta</a>
+  
+              </li>
+  
+              <li class="nav-item">
+  
+                <a class="nav-link" href="contacto.html" data-offset="100">Contacto</a>
+  
+              </li>
+  
+            </ul>
+  
+            <!-- Social Icon  -->
+            <ul class="navbar-nav nav-flex-icons">
+  
+              <li class="nav-item">
+  
+                <a class="nav-link"><i class="fab fa-facebook-f"></i></a>
+  
+              </li>
+  
+              <li class="nav-item">
+  
+                <a class="nav-link"><i class="fab fa-twitter"></i></a>
+  
+              </li>
+  
+              <li class="nav-item">
+  
+                <a class="nav-link"><i class="fab fa-instagram"></i></a>
+  
+              </li>
+  
+            </ul>
+  
           </div>
-
+  
         </div>
-
+  
+      </nav>
+  
+      <!-- Intro Section -->
+      <div id="home" class="view jarallax" data-jarallax='{"speed": 0.2}'
+        style="background-image: url('/img/as-prop/img 01.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
+  
+        <div class="mask rgba-black-slight">
+  
+          <div class="container h-100 d-flex justify-content-start align-items-center">
+  
+            <div class="row smooth-scroll">
+  
+              <div class="col-md-12">
+  
+                <div class="wow fadeInUp">
+  
+                  <h2 class="display-3 font-weight-bold mb-3">Ariel Sauret</h2>
+  
+                  <h4 class="text-uppercase font-weight-bold pb-5">Propiedades</h4>
+  
+                  <h2 class=" mt-3">Welcome to my portfolio!</h2>
+  
+                </div>
+  
+              </div>
+  
+            </div>
+  
+          </div>
+  
+        </div>
+  
       </div>
-
-    </div>
-
+  
   </header>
   <!-- Navigation & Intro -->
+
 
   <!-- Main layout -->
   <main>
 
     <div class="container-fluid" style="background-color: #323438;">
 
-    <div class="container mt-5 py-5">
+    <div class="container py-5">
 
         <!--Section: Content-->
         <section class="my-md-5 z-depth-1 rounded" 
