--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
               <div class="col-md-12">
 
                 <a class="btn btn-outline-black waves-effect" href="listado-propiedades.html"><strong
-                    class="font-weight-bold mb-3 pb-3">more</strong></a>
+                    class="font-weight-bold mb-3 pb-3">ver mas propiedades</strong></a>
 
               </div>
 
@@ -515,7 +515,7 @@
         <div class="white-text smooth-scroll wow fadeIn" data-wow-delay="0.2s">
 
           <h3 class="text-center h3-responsive mb-5"><i class="fas fa-quote-left" aria-hidden="true"></i>
-            Enfocados en el cliente.Impulsados por los resultados
+            Enfocados en el cliente. Impulsados por los resultados
             <i class="fas fa-quote-right" aria-hidden="true"></i></h3>
 
           <h5 class="text-center font-italic wow fadeIn" data-wow-delay="0.2s">~ Ariel Sauret Propiedades</h5>
