--- a/listado-propiedades.html
+++ b/listado-propiedades.html
@@ -213,7 +213,7 @@
 
                   </table>
                   <!-- Button -->
-                  <a href="propiedad.html" class="btn btn-primary">Mas Informacion</a>
+                  <a href="propiedad.html#galeria" class="btn btn-primary">Mas Informacion</a>
               
                 </div>
     
