--- a/propiedad.html
+++ b/propiedad.html
@@ -132,7 +132,7 @@
   
                   <h4 class="text-uppercase font-weight-bold pb-5">Propiedades</h4>
   
-                  <h2 class=" mt-3">Welcome to my portfolio!</h2>
+                  <h2 class="mt-3" id="galeria">Welcome to my portfolio!</h2>
   
                 </div>
   
@@ -270,6 +270,7 @@
           </tbody>
 
         </table>
+        <!-- Table -->
         
           <!--Google map-->
           <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
@@ -277,12 +278,16 @@
                 style="border:0" allowfullscreen></iframe>
           </div>
           <!--Google Maps-->
+          
+        </div>
 
       </div>
 
-    </div>
-    <!-- Table -->
-
+      <div class="row">
+        <div class="col-2 ml-2">
+          <a class="btn btn btn-outline-blue waves-effect" href="listado-propiedades.html#propiedades">Volver</a>
+        </div>
+      </div>
 
   </main>
   <!-- Main layout -->
