--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
       }
     }
 
-
   </style>
 
 </head>
@@ -63,8 +62,6 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
 
       <div class="container">
-
-        <a class="navbar-brand" href="#">AS Propiedades</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
           aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -91,7 +88,7 @@
 
             <li class="nav-item">
 
-              <a class="nav-link" href="contacto.html" data-offset="100">Contacto</a>
+              <a class="nav-link" href="contacto.html#contacto" data-offset="100">Contacto</a>
 
             </li>
 
@@ -127,7 +124,7 @@
     </nav>
 
     <!-- Video -->
-    <section class="view">
+    <section id="home" class="view">
         <video poster="https://mdbootstrap.com/img/Photos/Others/background.jpg" playsinline autoplay muted loop>
           <source src="img/video.mp4" type="video/mp4">
         </video>
@@ -136,12 +133,9 @@
             <div class="row pt-5 mt-3">
               <div class="col-md-12 white-text text-center smooth-scroll">
                 <div class="wow fadeInDown" data-wow-delay="0.2s">
-                  <h3 class="display-4 font-weight-bold white-text mb-4">Ariel Sauret Propiedades</h3>
+                  <img class="img-fluid rounded mx-auto d-block " src="/img/logo.png" alt="">
                   <hr class="hr-light my-4 clearfix d-none d-md-block">
-                  <h5 class="white-text description mx-3 mb-4 wow fadeIn" data-wow-delay="0.3s">Lorem ipsum dolor sit
-                    amet, consectetur adipisicing elit. Rem repellendus quasi fuga
-                    nesciunt dolorum nulla magnam veniam sapiente, fugiat!
-                  </h5>
+                  
                 </div>
                 <a class="btn pink-gradient btn-rounded btn-lg font-weight-bold wow fadeIn" data-wow-delay="0.3s" href="#services">
                   Servicios</a>
