agregando info propiedades

--- a/contacto.html
+++ b/contacto.html
@@ -148,7 +148,7 @@
         <section class="my-md-5 z-depth-1 rounded" 
           style="background-image: url('/img/as-prop/contacto.jpg'); background-size: cover; background-position: center center;">
       
-          <div class="rgba-black-strong rounded py-5">
+          <div id="contacto" class="rgba-black-strong rounded py-5">
       
             <!-- Section heading -->
             <h3 class="text-center font-weight-bold text-white mt-3 mb-5">Contacto</h3>
