--- a/index.html
+++ b/index.html
@@ -76,19 +76,19 @@
 
             <li class="nav-item">
 
-              <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/index.html">Inicio <span class="sr-only">(current)</span></a>
 
             </li>
 
             <li class="nav-item">
 
-              <a class="nav-link" href="listado-propiedades.html" data-offset="90">Venta</a>
+              <a class="nav-link" href="html/listado-propiedades.html" data-offset="90">Venta</a>
 
             </li>
 
             <li class="nav-item">
 
-              <a class="nav-link" href="contacto.html#contacto" data-offset="100">Contacto</a>
+              <a class="nav-link" href="html/contacto.html#contacto" data-offset="100">Contacto</a>
 
             </li>
 
@@ -482,7 +482,7 @@
 
               <div class="col-md-12">
 
-                <a class="btn btn-outline-black waves-effect" href="listado-propiedades.html"><strong
+                <a class="btn btn-outline-black waves-effect" href="/html/listado-propiedades.html"><strong
                     class="font-weight-bold mb-3 pb-3">ver mas propiedades</strong></a>
 
               </div>
