--- a/html/listado-propiedades.html
+++ b/html/listado-propiedades.html
@@ -218,7 +218,7 @@
 
                   </table>
                   <!-- Button -->
-                  <a href="propiedad.html#galeria" class="btn btn-primary">Mas Informacion</a>
+                  <a href="/html/001.html#galeria" class="btn btn-primary">Mas Informacion</a>
               
                 </div>
     
