--- a/html/listado-propiedades.html
+++ b/html/listado-propiedades.html
@@ -293,7 +293,7 @@
   
                     </table>
                     <!-- Button -->
-                    <a href="propiedad.html" class="btn btn-primary">Mas Informacion</a>
+                    <a href="002.html" class="btn btn-primary">Mas Informacion</a>
                 
                   </div>
       
