--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
             Enfocados en el cliente. Impulsados por los resultados
             <i class="fas fa-quote-right" aria-hidden="true"></i></h3>
 
-          <h5 class="text-center font-italic wow fadeIn" data-wow-delay="0.2s">~ Ariel Sauret Propiedades</h5>
+          <h5 class="text-center font-italic wow fadeIn" data-wow-delay="0.2s">~ Ariel Sauret Negocios Inmobiliarios</h5>
 
         </div>
 
