--- a/html/contacto.html
+++ b/html/contacto.html
@@ -99,39 +99,25 @@
   
       </nav>
   
-  
-      <!-- Intro Section -->
-      <div id="home" class="view jarallax" data-jarallax='{"speed": 0.2}'
-        style="background-image: url('/img/as-prop/img 01.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
-  
-        <div class="mask rgba-black-slight">
-  
-          <div class="container h-100 d-flex justify-content-start align-items-center">
-  
-            <div class="row smooth-scroll">
-  
-              <div class="col-md-12">
-  
-                <div class="wow fadeInUp">
-  
-                  <h2 class="display-3 font-weight-bold mb-3">Ariel Sauret</h2>
-  
-                  <h4 class="text-uppercase font-weight-bold pb-5">Propiedades</h4>
-  
-                  <h2 class=" mt-3">Welcome to my portfolio!</h2>
-  
-                </div>
-  
-              </div>
-  
+      <!-- Carousel -->
+      <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="/img/as-prop/carousel.01.jpg"
+                alt="First slide">
             </div>
-  
+            <div class="carousel-item">
+              <img class="d-block w-100" src="/img/as-prop/carousel.02.jpg"
+                alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="/img/as-prop/carousel.03.jpg"
+                alt="Third slide">
+            </div>
           </div>
-  
-        </div>
-  
+            
       </div>
-  
+      
   </header>
   <!-- Navigation & Intro -->
 
