--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
 
             <li class="nav-item">
 
+              <a class="nav-link"><i class="fab fa-whatsapp"></i></a>
+
+            </li>
+
+            <li class="nav-item">
+
               <a class="nav-link"><i class="fab fa-facebook-f"></i></a>
 
             </li>
