--- a/html/listado-propiedades.html
+++ b/html/listado-propiedades.html
@@ -130,268 +130,14 @@
 
         <!-- Listado Propiedades -->
         <section id="propiedades" class="section pt-2 pb-5">
-
-          <!-- Secion heading -->
-          <h1 class="text-left white-text text-uppercase font-weight-bold mt-5 mb-3 mt-4 wow fadeIn"
-            data-wow-delay="0.2s">venta de propiedades</h1>
-
         
-          <!-- First Row -->
-          <div class="row mt-5">
-
-            <div class="col-lg-4 col-md-12 mb-5 wow fadeIn" data-wow-delay="0.4s">
-              <div class="card">
-
-                <div class="view">
-
-                  <!-- Card image -->
-                  <img src="/img/as-prop/propiedades/001/casa.jose.001.jpg" alt="Card image cap" class="card-img-top">
-
-                </div>
-
-                <div class="card-body">
-                  <p class="h5">Wernicke 2000</p>
-                  <p class="h6">Casa - Ciudad Jardin</p>
-                  <p class="h5">USD $120.000 - Venta</p>
-                  <span class="badge badge-pill badge-light m-1">3 amb.</span>
-                  <span class="badge badge-pill badge-light m-1">2 bañ.</span>
-                  <span class="badge badge-pill badge-light m-1">1 Cochera</span>
-                  <span class="badge badge-pill badge-light m-1">200 m² Total</span>
-
-
-                </div>
-
-              </div>  
-            </div>
-
-            <div class="col-lg-4 col-md-12 mb-5 wow fadeIn" data-wow-delay="0.4s">
-                <div class="card">
-
-                  <div class="view">
-
-                    <!-- Card image -->
-                    <img src="/img/as-prop/propiedades/002/casa.palomar.01.jpg" alt="Card image cap" class="card-img-top">
-
-                  </div>
-
-                  <div class="card-body">
-                    <p class="h5">San Martin 1337</p>
-                    <p class="h6">Casa - Palomar</p>
-                    <p class="h5">USD $120.000 - Venta</p>
-                    <span class="badge badge-pill badge-light m-1">3 amb.</span>
-                    <span class="badge badge-pill badge-light m-1">2 bañ.</span>
-                    <span class="badge badge-pill badge-light m-1">200 m² Total</span>
-
-                  </div>
-
-                </div>  
-            </div>
-
-            <div class="col-lg-4 col-md-12 mb-5 wow fadeIn" data-wow-delay="0.4s">
-                <div class="card">
-
-                  <div class="view">
-
-                    <!-- Card image -->
-                    <img src="/img/as-prop/propiedades/001/casa.jose.frente.02.jpg" alt="Card image cap" class="card-img-top">
-
-                    <!-- Vendido -->
-                    <div class="mask flex-center rgba-red-light">
-                        <p class="h3 white-text"><strong>Vendido</strong></p>
-                    </div>
-                    <!-- Vendido -->
-
-                  </div>
-
-                  <div class="card-body">
-                    <p class="h5">Libertad 420</p>
-                    <p class="h6">Chalet - Villa Bosch</p>
-                    <p class="h5 ">USD $170.000 - Venta</p>
-                    <span class="badge badge-pill badge-light m-1">3 amb.</span>
-                    <span class="badge badge-pill badge-light m-1">2 bañ.</span>
-                    <span class="badge badge-pill badge-light m-1">Jacuzzi</span>
-                    <span class="badge badge-pill badge-light m-1">200 m² Total</span>
-
-                  </div>
-
-                </div>  
-
-            </div>
-
-          </div>
-          <!-- First Row -->
-
-          <!-- Second Row -->
-          <div class="row mt-5">
-
-              <div class="col-lg-4 col-md-12 mb-5 wow fadeIn" data-wow-delay="0.4s">
-                <div class="card">
-  
-                  <div class="view">
-  
-                    <!-- Card image -->
-                    <img src="/img/as-prop/propiedades/001/casa.jose.001.jpg" alt="Card image cap" class="card-img-top">
-  
-                  </div>
-  
-                  <div class="card-body">
-                    <p class="h5">Wernicke 2000</p>
-                    <p class="h6">Casa - Ciudad Jardin</p>
-                    <p class="h5">USD $120.000 - Venta</p>
-                    <span class="badge badge-pill badge-light m-1">3 amb.</span>
-                    <span class="badge badge-pill badge-light m-1">2 bañ.</span>
-                    <span class="badge badge-pill badge-light m-1">1 Cochera</span>
-                    <span class="badge badge-pill badge-light m-1">200 m² Total</span>
-  
-  
-                  </div>
-  
-                </div>  
-              </div>
-  
-              <div class="col-lg-4 col-md-12 mb-5 wow fadeIn" data-wow-delay="0.4s">
-                  <div class="card">
-  
-                    <div class="view">
-  
-                      <!-- Card image -->
-                      <img src="/img/as-prop/propiedades/002/casa.palomar.01.jpg" alt="Card image cap" class="card-img-top">
-  
-                    </div>
-  
-                    <div class="card-body">
-                      <p class="h5">San Martin 1337</p>
-                      <p class="h6">Casa - Palomar</p>
-                      <p class="h5">USD $120.000 - Venta</p>
-                      <span class="badge badge-pill badge-light m-1">3 amb.</span>
-                      <span class="badge badge-pill badge-light m-1">2 bañ.</span>
-                      <span class="badge badge-pill badge-light m-1">200 m² Total</span>
-  
-                    </div>
-  
-                  </div>  
-              </div>
-  
-              <div class="col-lg-4 col-md-12 mb-5 wow fadeIn" data-wow-delay="0.4s">
-                  <div class="card">
-  
-                    <div class="view">
-  
-                      <!-- Card image -->
-                      <img src="/img/as-prop/propiedades/001/casa.jose.frente.02.jpg" alt="Card image cap" class="card-img-top">
-  
-                      <!-- Vendido -->
-                      <div class="mask flex-center rgba-red-light">
-                          <p class="h3 white-text"><strong>Vendido</strong></p>
-                      </div>
-                      <!-- Vendido -->
-  
-                    </div>
-  
-                    <div class="card-body">
-                      <p class="h5">Libertad 420</p>
-                      <p class="h6">Chalet - Villa Bosch</p>
-                      <p class="h5 ">USD $170.000 - Venta</p>
-                      <span class="badge badge-pill badge-light m-1">3 amb.</span>
-                      <span class="badge badge-pill badge-light m-1">2 bañ.</span>
-                      <span class="badge badge-pill badge-light m-1">Jacuzzi</span>
-                      <span class="badge badge-pill badge-light m-1">200 m² Total</span>
-  
-                    </div>
-  
-                  </div>  
-  
-              </div>
-  
-          </div>
-          <!-- Second Row -->
-
-          <!-- Third Row -->
-          <div class="row mt-5">
-
-              <div class="col-lg-4 col-md-12 mb-5 wow fadeIn" data-wow-delay="0.4s">
-                <div class="card">
-  
-                  <div class="view">
-  
-                    <!-- Card image -->
-                    <img src="/img/as-prop/propiedades/001/casa.jose.001.jpg" alt="Card image cap" class="card-img-top">
-  
-                  </div>
-  
-                  <div class="card-body">
-                    <p class="h5">Wernicke 2000</p>
-                    <p class="h6">Casa - Ciudad Jardin</p>
-                    <p class="h5">USD $120.000 - Venta</p>
-                    <span class="badge badge-pill badge-light m-1">3 amb.</span>
-                    <span class="badge badge-pill badge-light m-1">2 bañ.</span>
-                    <span class="badge badge-pill badge-light m-1">1 Cochera</span>
-                    <span class="badge badge-pill badge-light m-1">200 m² Total</span>
-  
-  
-                  </div>
-  
-                </div>  
-              </div>
-  
-              <div class="col-lg-4 col-md-12 mb-5 wow fadeIn" data-wow-delay="0.4s">
-                  <div class="card">
-  
-                    <div class="view">
-  
-                      <!-- Card image -->
-                      <img src="/img/as-prop/propiedades/002/casa.palomar.01.jpg" alt="Card image cap" class="card-img-top">
-  
-                    </div>
-  
-                    <div class="card-body">
-                      <p class="h5">San Martin 1337</p>
-                      <p class="h6">Casa - Palomar</p>
-                      <p class="h5">USD $120.000 - Venta</p>
-                      <span class="badge badge-pill badge-light m-1">3 amb.</span>
-                      <span class="badge badge-pill badge-light m-1">2 bañ.</span>
-                      <span class="badge badge-pill badge-light m-1">200 m² Total</span>
-  
-                    </div>
-  
-                  </div>  
-              </div>
-  
-              <div class="col-lg-4 col-md-12 mb-5 wow fadeIn" data-wow-delay="0.4s">
-                  <div class="card">
-  
-                    <div class="view">
-  
-                      <!-- Card image -->
-                      <img src="/img/as-prop/propiedades/001/casa.jose.frente.02.jpg" alt="Card image cap" class="card-img-top">
-  
-                      <!-- Vendido -->
-                      <div class="mask flex-center rgba-red-light">
-                          <p class="h3 white-text"><strong>Vendido</strong></p>
-                      </div>
-                      <!-- Vendido -->
-  
-                    </div>
-  
-                    <div class="card-body">
-                      <p class="h5">Libertad 420</p>
-                      <p class="h6">Chalet - Villa Bosch</p>
-                      <p class="h5 ">USD $170.000 - Venta</p>
-                      <span class="badge badge-pill badge-light m-1">3 amb.</span>
-                      <span class="badge badge-pill badge-light m-1">2 bañ.</span>
-                      <span class="badge badge-pill badge-light m-1">Jacuzzi</span>
-                      <span class="badge badge-pill badge-light m-1">200 m² Total</span>
-  
-                    </div>
-  
-                  </div>  
-  
-              </div>
-  
-          </div>
-          <!-- Third Row -->
-
-       
+          <!-- VUE -->
+          <div id="app">
+            <button @click="filtrarPropiedades">filtrar</button>
+            <productos-lista :propiedades="propiedades" titulo="Venta de propiedades">
+            </productos-lista>
+          </div>      
+          <!-- VUE -->
 
         </section>
         <!-- Listado Propiedades -->
@@ -468,6 +214,125 @@
   <script type="text/javascript " src="../js/bootstrap.min.js "></script>
   <!-- MDB core JavaScript -->
   <script type="text/javascript " src="../js/mdb.min.js "></script>
+
+  <!-- VUE.JS -->
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
+  <script>
+    Vue.component('productos-lista', {
+      template: '<div>\
+          <h1 class="text-left white-text text-uppercase font-weight-bold mt-5 mb-3 mt-4 wow fadeIn"\
+            data-wow-delay="0.2s">{{titulo}}</h1>\
+                <div class="card-columns">\
+                  <item-lista-productos v-for="propiedad in propiedades"\
+                  :propiedad="propiedad" :key="propiedad.id">\
+                  </item-lista-productos>\
+                </div>\
+                </div>',
+      props: ['titulo', 'propiedades']
+    });
+
+    Vue.component('item-lista-productos', {
+                  template: 
+                  '<div class="card">\
+                        <div class="view">\
+                          <!-- Card image -->\
+                          <img v-bind:src="propiedad.imagen" alt="Card image cap" class="card-img-top">\
+                          <!-- Vendido -->\
+                          <div v-if="propiedad.vendido === true" class="mask flex-center rgba-red-light">\
+                              <p class="h3 white-text"><strong>Vendido</strong></p>\
+                          </div>\
+                          <!-- Vendido -->\
+                        </div>\
+                        <div class="card-body">\
+                          <p class="h5">{{propiedad.direccion}}</p>\
+                          <p class="h6">{{propiedad.tipo}} - {{propiedad.barrio}}</p>\
+                          <p class="h5 ">USD ${{propiedad.valor}} - Venta</p>\
+                          <span class="badge badge-pill badge-light m-1" v-for="etiqueta in propiedad.etiquetas">\
+                            {{etiqueta}}</span>\
+                        </div>\
+                      </div>',
+                  props: ['propiedad']
+    });
+
+    let vm = new Vue({
+      el: '#app',
+      data: {
+        loggedIn: false,
+        propiedades: [
+        {
+          id: 1,
+          imagen: '/img/as-prop/propiedades/001/casa.jose.001.jpg',
+          direccion: 'Libertad 420',
+          barrio: 'Villa Bosch',
+          tipo: 'Chalet',
+          valor: '170.000',
+          vendido: false,
+          etiquetas: ['3 amb.', '2 bañ.', 'cochera', '200 m² total']
+        },
+        {
+          id: 2,
+          imagen: '/img/as-prop/propiedades/001/casa.jose.002.jpg',
+          direccion: 'San Martin 1337',
+          barrio: 'Palomar',
+          tipo: 'Casa',
+          valor: '120.000',
+          vendido: true,
+          etiquetas: ['4 amb.', '3 bañ.', 'jardin botanico', '400 m² total']
+        },
+        {
+          id: 3,
+          imagen: '/img/as-prop/propiedades/001/casa.jose.003.jpg',
+          direccion: 'Cordoba 240',
+          barrio: 'Ballester',
+          tipo: 'PH',
+          valor: '200.000',
+          vendido: false,
+          etiquetas: ['3 amb.', '2 bañ.', 'cochera', '200 m² total']
+        },
+        {
+          id: 4,
+          imagen: '/img/as-prop/propiedades/001/casa.jose.004.jpg',
+          direccion: 'Rosales 101',
+          barrio: 'Moron',
+          tipo: 'Departamento',
+          valor: '220.000',
+          vendido: true,
+          etiquetas: ['3 amb.', 'cochera', '200 m² total']
+        },
+        {
+          id: 5,
+          imagen: '/img/as-prop/propiedades/001/casa.jose.004.jpg',
+          direccion: 'Rosales 101',
+          barrio: 'Moron',
+          tipo: 'Departamento',
+          valor: '220.000',
+          vendido: true,
+          etiquetas: ['3 amb.', '2 bañ.', '200 m² total']
+        },
+        {
+          id: 6,
+          imagen: '/img/as-prop/propiedades/001/casa.jose.004.jpg',
+          direccion: 'Rosales 101',
+          barrio: 'Moron',
+          tipo: 'Departamento',
+          valor: '220.000',
+          vendido: false,
+          etiquetas: ['3 amb.', '2 bañ.', 'cochera', '200 m² total']
+        },
+      ]
+      },
+      methods: {
+        filtrarPropiedades() {
+          this.propiedades = this.propiedades.filter(function (propiedad) {
+            if (propiedad.barrio == 'Villa Bosch') {
+              return propiedad
+            }
+          })
+        }
+      }
+    });
+  </script>
 
   <script>
     //Animation init
