--- a/html/propiedad.html
+++ b/html/propiedad.html
@@ -192,7 +192,7 @@
 
         </div>
 
-        <button class="btn">VOLVER</button>
+        <button class="btn white">VOLVER</button>
     </div>
 
   </main>
