moviendo porpiedades a su archivo

--- a/html/listado-propiedades.html
+++ b/html/listado-propiedades.html
@@ -220,69 +220,11 @@
 
   <!-- VUE.JS -->
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <!-- Propiedades -->
+  <script src="/js/propiedades.js"></script>
 
   <script>
-    const propiedades = [
-        {
-          id: 1,
-          imagen: '/img/as-prop/propiedades/001/casa.jose.001.jpg',
-          direccion: 'Libertad 420',
-          barrio: 'Villa Bosch',
-          tipo: 'Chalet',
-          valor: '170.000',
-          vendido: false,
-          etiquetas: ['3 amb.', '2 bañ.', 'cochera', '200 m² total']
-        },
-        {
-          id: 2,
-          imagen: '/img/as-prop/propiedades/001/casa.jose.002.jpg',
-          direccion: 'San Martin 1337',
-          barrio: 'Palomar',
-          tipo: 'Casa',
-          valor: '120.000',
-          vendido: true,
-          etiquetas: ['4 amb.', '3 bañ.', 'jardin botanico', '400 m² total']
-        },
-        {
-          id: 3,
-          imagen: '/img/as-prop/propiedades/001/casa.jose.003.jpg',
-          direccion: 'Cordoba 240',
-          barrio: 'Ballester',
-          tipo: 'PH',
-          valor: '200.000',
-          vendido: false,
-          etiquetas: ['3 amb.', '2 bañ.', 'cochera', '200 m² total']
-        },
-        {
-          id: 4,
-          imagen: '/img/as-prop/propiedades/001/casa.jose.004.jpg',
-          direccion: 'Rosales 101',
-          barrio: 'Moron',
-          tipo: 'Departamento',
-          valor: '220.000',
-          vendido: true,
-          etiquetas: ['3 amb.', 'cochera', '200 m² total']
-        },
-        {
-          id: 5,
-          imagen: '/img/as-prop/propiedades/001/casa.jose.004.jpg',
-          direccion: 'Rosales 102',
-          barrio: 'Moron',
-          tipo: 'Departamento',
-          valor: '220.000',
-          vendido: true,
-          etiquetas: ['3 amb.', '2 bañ.', '200 m² total']
-        },
-        {
-          id: 6,
-          imagen: '/img/as-prop/propiedades/001/casa.jose.004.jpg',
-          direccion: 'Rosales 103',
-          barrio: 'Moron',
-          tipo: 'Departamento',
-          valor: '220.000',
-          vendido: false,
-          etiquetas: ['3 amb.', '2 bañ.', 'cochera', '200 m² total']
-        }];
+    
 
     Vue.component('menu-lista', {
       template: '<div class="container">\
@@ -339,7 +281,7 @@
               ? this.propiedades.filter(p => p.barrio === barrio)
               : this.propiedades;
             }
-      }
+      } //agregar filtro tipo de propiedad
     });
 
     Vue.component('item-lista-productos', {
@@ -368,7 +310,7 @@
     let vm = new Vue({
       el: '#app',
       data: {
-        propiedades,
+        propiedades: propiedades,
         propiedadesSeleccionadas: propiedades
       },
     });
